# fastproc

./: .gitignore  README.md  pyproject.toml
.github/: CI.yml
benchmark/: benchmark_queue.py
examples/: example_queue.py  simple_process.py
fastproc/: __init__.py  fastpool.py  fastqueue.py  process.py
tests/: __init__.py  test_pool_integration.py  test_pool_stress.py  test_pool_unit.py  test_process.py  test_queue.py
